[gd_scene load_steps=10 format=3 uid="uid://cuxauu0yk4tcp"]

[ext_resource type="Script" uid="uid://g7yynt6vykxy" path="res://scenes/menu/game_over_menu/game_over_menu.gd" id="1_gv1r1"]
[ext_resource type="Theme" uid="uid://dwlxe2w7oyyuk" path="res://assets/themes/main_titles.tres" id="3_k5lcj"]
[ext_resource type="Theme" uid="uid://tt3lcvk2vksd" path="res://assets/themes/button_theme.tres" id="4_8fprv"]
[ext_resource type="Texture2D" uid="uid://cvqirfdwhta1a" path="res://assets/sprites/objects/gravestones2.png" id="5_k5lcj"]
[ext_resource type="PackedScene" uid="uid://wm20d5epi3ac" path="res://scenes/menu/options_menus/options_menu.tscn" id="5_whxtc"]
[ext_resource type="Texture2D" uid="uid://b2pejddlihmg6" path="res://assets/sprites/objects/gravestones3.png" id="6_8fprv"]
[ext_resource type="Texture2D" uid="uid://g5o21p66bfdo" path="res://assets/sprites/objects/gravestones.png" id="7_whxtc"]

[sub_resource type="SystemFont" id="SystemFont_g64rs"]
font_names = PackedStringArray("Britannic")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gv1r1"]

[node name="Game_Over_Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gv1r1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.964249, 0.626852, 0.568051, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Seperator" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="title" type="Label" parent="MarginContainer/Seperator"]
layout_mode = 2
theme = ExtResource("3_k5lcj")
theme_override_font_sizes/font_size = 300
text = "Unworthy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="MarginContainer/Seperator"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("SystemFont_g64rs")
theme_override_font_sizes/font_size = 50
text = "You have failed to keep my children inside their pen. This timeilne has beeen shattered."
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Seperator"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_gv1r1")

[node name="NewRun_Button" type="Button" parent="MarginContainer/Seperator"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("4_8fprv")
text = "New Run"

[node name="Main_Button" type="Button" parent="MarginContainer/Seperator"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("4_8fprv")
text = "Main Menu"

[node name="Quit_Button" type="Button" parent="MarginContainer/Seperator"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("4_8fprv")
text = "Quit"

[node name="Options_Menu" parent="." instance=ExtResource("5_whxtc")]
visible = false
layout_mode = 1

[node name="Gravestones2" type="Sprite2D" parent="."]
position = Vector2(1630, 659)
scale = Vector2(5.75625, 5.75625)
texture = ExtResource("5_k5lcj")

[node name="Gravestones5" type="Sprite2D" parent="."]
position = Vector2(1873, 855)
scale = Vector2(4.84688, 4.39688)
texture = ExtResource("5_k5lcj")

[node name="Gravestones3" type="Sprite2D" parent="."]
position = Vector2(151, 801)
scale = Vector2(4.85625, 4.85625)
texture = ExtResource("6_8fprv")

[node name="Gravestones" type="Sprite2D" parent="."]
position = Vector2(-129, 1657)
texture = ExtResource("7_whxtc")

[node name="Gravestones4" type="Sprite2D" parent="."]
position = Vector2(458, 772)
scale = Vector2(4.35625, 4.35625)
texture = ExtResource("7_whxtc")

[connection signal="pressed" from="MarginContainer/Seperator/NewRun_Button" to="." method="_on_new_run_button_pressed"]
[connection signal="pressed" from="MarginContainer/Seperator/Main_Button" to="." method="_on_main_button_pressed"]
[connection signal="pressed" from="MarginContainer/Seperator/Quit_Button" to="." method="_on_quit_button_pressed"]
